--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style/blog.css">
 </head>
 <body>
+    <h2>Sliders of image</h2>
+    <img src="images/baby in bed.jpg" alt="">
+    <img src="images/cat.jpg" alt="">
     <div>
         <h3>That is my trial repo</h3>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint voluptatem temporibus nesciunt corrupti deserunt pariatur eaque dolor necessitatibus tempore eos ipsum neque minus ducimus consequuntur repellat veritatis cumque unde enim velit exercitationem, esse dolorum perspiciatis perferendis molestias. Ad nesciunt, impedit dolorum velit a itaque aut sed aspernatur, explicabo, fugiat omnis!</p>
